# satohuru-scraper

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  serverless.yml
src/handlers/: app.py
